[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/StarFox1.gd" type="Script" id=1]
[ext_resource path="res://World/Assets/Ground.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]

[node name="StarFox1" type="Spatial" groups=[
"game",
]]
script = ExtResource( 1 )

[node name="World" type="Spatial" parent="."]

[node name="Ground" type="GridMap" parent="World"]
mesh_library = ExtResource( 2 )
cell_size = Vector3( 10, 10, 10 )
collision_layer = 4
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 56.4207, 25.252 )

[node name="BulletContainer" type="Spatial" parent="."]

[node name="EnemyContainer" type="Spatial" parent="."]

[node name="SpawnEnemy" type="Timer" parent="EnemyContainer"]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="EnemyContainer/SpawnEnemy" to="." method="_on_SpawnEnemy_timeout"]
